apps/default/garage/cluster/sneaker-social.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-cluster-sneaker-social
spec:
  parentRefs:
    - name: envoy-towonel
      namespace: networking
      sectionName: sneaker-https
  hostnames:
    - "sneaker.social"
  rules:
    - backendRefs:
        - name: garage-cluster
          port: 3902
